Start fixing trinza page to align with updated components

--- a/src/styles/Chevron.scss
+++ b/src/styles/Chevron.scss
@@ -26,6 +26,7 @@
   color: #fff;
   font-family: 'Apex Sans', 'Open Sans';
   font-weight: 900;
+  text-align: center;
 }
 
 .chevron {
